# editor

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  setup.py
nagare/: editor.py  validator.py  var.py
src/nagare/: editor.py  validator.py  var.py
tests/: test_editor.py
